crates/rsonpath-lib/tests/snapshots/engine_serialization_snapshots__ron__real_life_query_64.snap
---
source: crates/rsonpath-lib/tests/engine_serialization_snapshots.rs
expression: "&engine(\"$.personal.details.contact.information.phones.home\")?"
---
(V1, Automaton(
  states: [
    StateTable(
      attributes: StateAttributes(2),
      member_transitions: [],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(4),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            112,
            101,
            114,
            115,
            111,
            110,
            97,
            108,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(808923184, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(842477616, 1),
            SlashUSingle(859254832, 1),
            SlashUSingle(1714827312, 1),
            SlashUSingle(1698050096, 1),
            SlashUSingle(825634864, 1),
            SlashUSingle(1664495664, 1),
            None,
          ],
          len: 10,
          len_limit: 50,
        ), State(2)),
      ],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(4),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            100,
            101,
            116,
            97,
            105,
            108,
            115,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(875966512, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(876032048, 1),
            SlashUSingle(825634864, 1),
            SlashUSingle(959852592, 1),
            SlashUSingle(1664495664, 1),
            SlashUSingle(859254832, 1),
            None,
          ],
          len: 9,
          len_limit: 44,
        ), State(3)),
      ],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(4),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            99,
            111,
            110,
            116,
            97,
            99,
            116,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(859189296, 1),
            SlashUSingle(1714827312, 1),
            SlashUSingle(1698050096, 1),
            SlashUSingle(876032048, 1),
            SlashUSingle(825634864, 1),
            SlashUSingle(859189296, 1),
            SlashUSingle(876032048, 1),
            None,
          ],
          len: 9,
          len_limit: 44,
        ), State(4)),
      ],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(4),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            105,
            110,
            102,
            111,
            114,
            109,
            97,
            116,
            105,
            111,
            110,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(959852592, 1),
            SlashUSingle(1698050096, 1),
            SlashUSingle(909520944, 1),
            SlashUSingle(1714827312, 1),
            SlashUSingle(842477616, 1),
            SlashUSingle(1681272880, 1),
            SlashUSingle(825634864, 1),
            SlashUSingle(876032048, 1),
            SlashUSingle(959852592, 1),
            SlashUSingle(1714827312, 1),
            SlashUSingle(1698050096, 1),
            None,
          ],
          len: 13,
          len_limit: 68,
        ), State(5)),
      ],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(4),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            112,
            104,
            111,
            110,
            101,
            115,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(808923184, 1),
            SlashUSingle(943075376, 1),
            SlashUSingle(1714827312, 1),
            SlashUSingle(1698050096, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(859254832, 1),
            None,
          ],
          len: 8,
          len_limit: 38,
        ), State(6)),
      ],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(12),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            104,
            111,
            109,
            101,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(943075376, 1),
            SlashUSingle(1714827312, 1),
            SlashUSingle(1681272880, 1),
            SlashUSingle(892743728, 1),
            None,
          ],
          len: 6,
          len_limit: 26,
        ), State(7)),
      ],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(1),
      member_transitions: [],
      array_transitions: [],
      fallback_state: State(0),
    ),
  ],
))
