crates/rsonpath-lib/tests/snapshots/engine_serialization_snapshots__ron__slice_32.snap
---
source: crates/rsonpath-lib/tests/engine_serialization_snapshots.rs
expression: "&engine(\"$..entries[3:5:7]\")?"
---
(V1, Automaton(
  states: [
    StateTable(
      attributes: StateAttributes(2),
      member_transitions: [],
      array_transitions: [],
      fallback_state: State(0),
    ),
    StateTable(
      attributes: StateAttributes(0),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            101,
            110,
            116,
            114,
            105,
            101,
            115,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(892743728, 1),
            SlashUSingle(1698050096, 1),
            SlashUSingle(876032048, 1),
            SlashUSingle(842477616, 1),
            SlashUSingle(959852592, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(859254832, 1),
            None,
          ],
          len: 9,
          len_limit: 44,
        ), State(2)),
      ],
      array_transitions: [],
      fallback_state: State(1),
    ),
    StateTable(
      attributes: StateAttributes(56),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            101,
            110,
            116,
            114,
            105,
            101,
            115,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(892743728, 1),
            SlashUSingle(1698050096, 1),
            SlashUSingle(876032048, 1),
            SlashUSingle(842477616, 1),
            SlashUSingle(959852592, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(859254832, 1),
            None,
          ],
          len: 9,
          len_limit: 44,
        ), State(2)),
      ],
      array_transitions: [
        ArrayTransition(
          label: Index(JsonUInt(3)),
          target: State(3),
        ),
      ],
      fallback_state: State(1),
    ),
    StateTable(
      attributes: StateAttributes(1),
      member_transitions: [
        (StringPattern(
          bytes: [
            34,
            101,
            110,
            116,
            114,
            105,
            101,
            115,
            34,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
            32,
          ],
          alternatives: [
            None,
            SlashUSingle(892743728, 1),
            SlashUSingle(1698050096, 1),
            SlashUSingle(876032048, 1),
            SlashUSingle(842477616, 1),
            SlashUSingle(959852592, 1),
            SlashUSingle(892743728, 1),
            SlashUSingle(859254832, 1),
            None,
          ],
          len: 9,
          len_limit: 44,
        ), State(2)),
      ],
      array_transitions: [],
      fallback_state: State(1),
    ),
  ],
))
